# aws-lambda-stopec2instances

./: pyproject.toml
stopallec2instances/: lambda_function.py
