[tool.poetry]
name = "stopec2instance"
version = "0.1.0"
description = ""
authors = ["Ohshima Yusuke <ohshima.yusuke@yukke.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
